--- a/public/m/index.html
+++ b/public/m/index.html
@@ -20,7 +20,7 @@
     <!-- 头部区域 -->
     <header id="header">
         <h4>乐淘云购</h4>
-        <a href="#" class="fa fa-search"></a>
+        <a href="search.html" class="fa fa-search"></a>
     </header>
     <!-- 主体区域 -->
     <main id="main">
@@ -472,13 +472,13 @@
     <footer id="footer">
         <div class="mui-row">
             <div class="mui-col-xs-3">
-                <a href="#">
+                <a href="index.html">
                     <i class="fa fa-home now"></i>
                     <span>首页</span>
                 </a>
             </div>
             <div class="mui-col-xs-3">
-                <a href="#">
+                <a href="catetory.html">
                     <i class="fa fa-bars"></i>
                     <span>分类</span>
                 </a>
@@ -505,7 +505,7 @@
     <!-- 引入zepto的js文件 -->
     <script src="./lib/zepto/zepto.min.js"></script>
     <!-- 引入模板引擎的js文件 -->
-    <script src="./lib/artTemplate/template.js"></script>
+    <script src="./lib/artTemplate/template-web.js"></script>
     <!-- 引入主页的js文件 -->
     <script src="./js/index.js"></script>
 </body>
