乐淘第三次提交

--- a/public/m/catetory.html
+++ b/public/m/catetory.html
@@ -23,7 +23,7 @@
         <form action="#">
             <input type="search" placeholder="请输入你需要搜索的商品">
         </form>
-        <a href="#" class="fa fa-search"></a>
+        <a href="search.html"" class="fa fa-search"></a>
     </header>
     <!-- 主体区域 -->
     <main id="main">
